feat: Cypress E2E testing, and scaffold main application UI
